test/files/neg/t3909.check
t3909.scala:1: error: in object DO, multiple overloaded alternatives of m1 define default arguments
Error occurred in an application involving default arguments.
object DO {
       ^
one error found
